# rocketchat-hooks

./: Cargo.toml  README.md
examples/: post.rs
src/: client.rs  error.rs  lib.rs  structs.rs
